--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.5",
     "bootstrap": "^5.2.3",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.0",
@@ -25,7 +27,8 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
