--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
