--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.2.5",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "notiflix": "^3.2.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
