--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "axios": "^1.2.5",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
+    "i18next": "^22.4.9",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
     "moment": "^2.29.4",
     "notiflix": "^3.2.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^12.1.5",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
